bug 816485 - interpreting the devPixelsPerPx value from about:config should not depend on locale. r=roc